--- a/index.html
+++ b/index.html
@@ -3,248 +3,254 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sasuke Uchiha Pro Version - History Table</title>
-    <style>
-        /* Basic Reset */
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
+    <title>AI Prediction</title>
+    
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Roboto+Condensed:wght@400;700&display=swap" rel="stylesheet">
 
-        /* Body Styling */
+    <style>
+        /* Basic styling for container, button, and table with custom fonts */
         body {
-            font-family: 'Arial', sans-serif;
-            background: #0b0c10;
-            color: #FFFFFF;
             display: flex;
-            align-items: center;
             justify-content: center;
+            align-items: center;
             height: 100vh;
+            background-color: #333;
+            color: #fff;
+            font-family: 'Roboto', sans-serif;
+            margin: 0;
             overflow: hidden;
         }
 
-        /* Main Container */
-        .container {
-            background: #1f2833;
-            border-radius: 20px;
-            padding: 40px;
-            width: 90%;
-            max-width: 600px;
-            text-align: center;
-            position: relative;
-            box-shadow: 0 0 20px rgba(0, 0, 0, 0.8);
-            border: 5px solid #66fcf1; /* Thicker neon border */
+        /* Smoky background effect */
+        body::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: radial-gradient(circle, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.8));
+            z-index: -2;
+            opacity: 0.5;
         }
 
-        /* Glowing Effect */
-        .container::before {
-            content: "";
+        body::after {
+            content: '';
             position: absolute;
-            top: -5px;
-            left: -5px;
-            right: -5px;
-            bottom: -5px;
-            border-radius: 20px;
-            background: linear-gradient(60deg, transparent, rgba(102, 252, 241, 0.5), transparent);
-            animation: glow 3s infinite alternate;
+            top: -50%;
+            left: -50%;
+            width: 200%;
+            height: 200%;
+            background: url('https://www.transparenttextures.com/patterns/smoke.png') repeat;
+            opacity: 0.1;
+            animation: smoke 20s linear infinite;
             z-index: -1;
         }
 
-        @keyframes glow {
-            0% {
-                filter: blur(5px);
-            }
-            100% {
-                filter: blur(8px);
-            }
+        @keyframes smoke {
+            from { transform: translate(0, 0) scale(1.5); }
+            to { transform: translate(50px, 50px) scale(1.5); }
         }
 
-        /* Header Styling */
-        .header {
+        .container {
+            text-align: center;
+            background: rgba(0, 0, 0, 0.8);
+            padding: 20px;
+            border-radius: 10px;
+            width: 90%;
+            max-width: 600px;
+            position: relative;
+            box-shadow: 0 0 15px rgba(255, 255, 255, 0.5);
+            animation: blue-border-blink 5s linear infinite;
+        }
+
+        /* Blinking Title Text */
+        .blinking-title {
             font-size: 2em;
             font-weight: bold;
-            color: #66fcf1;
+            color: #FF4081;
             margin-bottom: 20px;
-            text-transform: uppercase;
-            letter-spacing: 3px;
-            border-bottom: 4px solid #45a29e; /* Thicker underline */
-            padding-bottom: 10px;
+            animation: blink 1s infinite;
+            font-family: 'Roboto Condensed', sans-serif;
         }
 
-        /* Period, Timer, and Result Styling */
-        .period, .timer, .result-box {
+        @keyframes blink {
+            0%, 100% { opacity: 1; }
+            50% { opacity: 0; }
+        }
+
+        .bordered-box, .result-box, .history-table th, .history-table td {
             font-size: 1.2em;
-            padding: 15px;
-            margin: 20px 0;
-            border-radius: 12px;
-            background: #0b0c10;
-            color: #c5c6c7;
-            border: 3px solid #45a29e; /* Thicker border */
-            box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
+            color: #1DE9B6;
+            margin: 10px 0;
+            padding: 10px;
+            border: 3px solid;
+            border-radius: 5px;
+            animation: blue-border-blink 5s linear infinite;
+            font-family: 'Roboto Condensed', sans-serif;
         }
 
-        .timer {
-            color: #ff6347;
-            font-weight: bold;
+        /* Blue blinking and moving effect */
+        @keyframes blue-border-blink {
+            0%, 100% { border-color: rgba(0, 123, 255, 0.8); box-shadow: 0 0 8px rgba(0, 123, 255, 0.6); }
+            50% { border-color: rgba(0, 255, 255, 1); box-shadow: 0 0 12px rgba(0, 123, 255, 1); }
         }
 
         .result-box {
-            color: #66fcf1;
-            display: none; /* Initially hidden */
-            font-weight: bold;
+            font-size: 1.5em;
+            color: #1DE9B6;
+            margin-top: 15px;
         }
 
-        /* Get Result Button */
         .get-result-btn {
-            font-size: 1.1em;
-            font-weight: bold;
-            padding: 12px 30px;
-            background: linear-gradient(145deg, #45a29e, #66fcf1);
-            color: #1f2833;
-            border: 3px solid #45a29e; /* Thicker border */
-            border-radius: 25px;
+            padding: 10px 20px;
+            background: #FF4081;
+            color: #FFFFFF;
+            font-size: 1em;
+            border: none;
+            border-radius: 5px;
             cursor: pointer;
-            transition: transform 0.3s;
-            box-shadow: 0 0 15px rgba(102, 252, 241, 0.8);
+            font-family: 'Roboto', sans-serif;
+            transition: background 0.3s;
         }
 
         .get-result-btn:hover {
-            transform: scale(1.1);
-            box-shadow: 0 0 20px rgba(102, 252, 241, 1);
+            background: #F50057;
         }
 
-        /* History Table Styling */
         .history-table {
             width: 100%;
-            border-collapse: collapse;
             margin-top: 20px;
+            border-collapse: collapse;
+            font-family: 'Roboto Condensed', sans-serif;
         }
 
         .history-table th, .history-table td {
-            padding: 12px;
-            text-align: center;
-            font-size: 1em;
-            color: #c5c6c7;
-            border: 3px solid #45a29e; /* Thick, sharp border for table cells */
+            padding: 10px;
+            color: #fff;
         }
 
         .history-table th {
-            background: #1f2833;
-            color: #66fcf1;
-            text-transform: uppercase;
+            background-color: #444;
         }
 
         .history-table tr:nth-child(even) {
-            background: rgba(255, 255, 255, 0.05);
+            background-color: #555;
         }
 
-        /* Responsive Adjustments */
-        @media (max-width: 768px) {
-            .header {
-                font-size: 1.8em;
-            }
-
-            .get-result-btn {
-                font-size: 1em;
-            }
+        /* Popup Message */
+        .popup-message {
+            display: none;
+            font-size: 1.2em;
+            color: #ff5722;
+            margin-top: 20px;
+            border-top: 2px solid #ff5722;
+            padding-top: 10px;
+            font-family: 'Roboto', sans-serif;
         }
     </style>
 </head>
 <body>
 
-    <div class="container">
-        <!-- Header -->
-        <div class="header">Sasuke Uchiha Pro Version</div>
+<div class="container">
+    <!-- Blinking Title Text -->
+    <div class="blinking-title">SASUKE UCHIHA 2.0</div>
 
-        <!-- Period Number Display -->
-        <div class="period" id="periodNumber">Period Number: 20241106100010001</div>
+    <!-- Period Number Display with Blue Border Animation -->
+    <div class="bordered-box" id="periodNumber">Period Number: Loading...</div>
 
-        <!-- Timer Display -->
-        <div class="timer" id="timerDisplay">Timer: 00 : 30</div>
+    <!-- Timer Display with Blue Border Animation -->
+    <div class="bordered-box" id="timer">Time Remaining: 00:00</div>
 
-        <!-- Result Display -->
-        <div class="result-box" id="resultBox">Result: SMALL</div>
+    <!-- Result Box with Blue Border Animation -->
+    <div class="result-box" id="resultBox">Result: Waiting...</div>
 
-        <!-- Get Result Button -->
-        <button class="get-result-btn" id="getResultBtn">Get Result</button>
+    <!-- Get Result Button -->
+    <button class="get-result-btn" id="getResultBtn">GET RESULT</button>
 
-        <!-- History Table -->
-        <table class="history-table" id="historyTable">
-            <thead>
-                <tr>
-                    <th>Period Number</th>
-                    <th>Result</th>
-                </tr>
-            </thead>
-            <tbody id="historyBody">
-            </tbody>
-        </table>
-    </div>
+    <!-- History Table -->
+    <table class="history-table">
+        <thead>
+            <tr>
+                <th>Period Number</th>
+                <th>Result</th>
+            </tr>
+        </thead>
+        <tbody id="historyBody">
+        </tbody>
+    </table>
 
-    <script>
-        // Function to generate random result for "BIG" or "SMALL"
-        function getRandomResult() {
-            const results = ["BIG", "SMALL"];
-            return results[Math.floor(Math.random() * results.length)];
+    <!-- Popup Message for Waiting -->
+    <div class="popup-message" id="popupMessage"> Please Wait for result period number</div>
+</div>
+
+<script>
+    const predictions = ["SMALL", "SMALL", "BIG", "SMALL", "SMALL", "BIG", "SMALL", "BIG", "BIG", "SMALL", 
+                         "BIG", "BIG", "SMALL", "SMALL", "BIG", "SMALL", "SMALL", "BIG", "BIG", "SMALL", 
+                         "BIG", "BIG", "SMALL", "BIG", "SMALL", "SMALL"];
+    let currentPredictionIndex = 0;
+    let lastPeriod = null;
+
+    function updatePeriodAndTimer() {
+        const now = new Date();
+        const year = now.getUTCFullYear();
+        const month = String(now.getUTCMonth() + 1).padStart(2, '0');
+        const day = String(now.getUTCDate()).padStart(2, '0');
+        const totalMinutes = now.getUTCHours() * 60 + now.getUTCMinutes();
+        const periodNumber = `${year}${month}${day}1000${10001 + totalMinutes}`;
+        
+        // Display the period number
+        document.getElementById("periodNumber").textContent = "Period Number: " + periodNumber;
+
+        // Timer countdown
+        const seconds = now.getUTCSeconds();
+        const remainingSeconds = 60 - seconds;
+        document.getElementById("timer").textContent = `Time Remaining: 00:${String(remainingSeconds).padStart(2, '0')}`;
+
+        return periodNumber;
+    }
+
+    setInterval(updatePeriodAndTimer, 1000);
+
+    function displayResult() {
+        const periodNumber = updatePeriodAndTimer();
+
+        // Check if the button was clicked twice in the same period
+        if (lastPeriod === periodNumber) {
+            document.getElementById("popupMessage").style.display = "block"; // Show popup message
+            return;
         }
 
-        // Store results by period number
-        const periodResults = {};
+        // Display the result and update history
+        const result = predictions[currentPredictionIndex];
+        currentPredictionIndex = (currentPredictionIndex + 1) % predictions.length;
 
-        function updatePeriodNumber() {
-            const now = new Date();
-            const year = now.getUTCFullYear();
-            const month = String(now.getUTCMonth() + 1).padStart(2, '0');
-            const day = String(now.getUTCDate()).padStart(2, '0');
-            const totalMinutes = now.getUTCHours() * 60 + now.getUTCMinutes();
-            const periodNumber = `${year}${month}${day}1000${10001 + totalMinutes}`;
-            document.getElementById("periodNumber").textContent = "Period Number: " + periodNumber;
+        document.getElementById("resultBox").textContent = "Result: " + result;
+        addHistoryEntry(periodNumber, result);
 
-            return periodNumber;
-        }
+        lastPeriod = periodNumber;
+        document.getElementById("popupMessage").style.display = "none"; // Hide popup message
+    }
 
-        function updateTimerAndResult() {
-            const now = new Date();
-            const seconds = now.getUTCSeconds();
-            const remainingSeconds = 60 - seconds;
-            document.getElementById("timerDisplay").textContent = "Timer: 00 : " + String(remainingSeconds).padStart(2, '0');
-        }
+    function addHistoryEntry(periodNumber, result) {
+        const historyBody = document.getElementById("historyBody");
+        const row = document.createElement("tr");
 
-        function addHistoryEntry(periodNumber, result) {
-            const historyBody = document.getElementById("historyBody");
-            const newRow = document.createElement("tr");
+        const periodCell = document.createElement("td");
+        periodCell.textContent = periodNumber;
+        row.appendChild(periodCell);
 
-            const periodCell = document.createElement("td");
-            periodCell.textContent = periodNumber;
-            newRow.appendChild(periodCell);
+        const resultCell = document.createElement("td");
+        resultCell.textContent = result;
+        row.appendChild(resultCell);
 
-            const resultCell = document.createElement("td");
-            resultCell.textContent = result;
-            newRow.appendChild(resultCell);
+        historyBody.appendChild(row);
+    }
 
-            historyBody.insertBefore(newRow, historyBody.firstChild);
-        }
-
-        // Attach event listener to "GET RESULT" button
-        document.getElementById("getResultBtn").addEventListener("click", function() {
-            const periodNumber = updatePeriodNumber();
-
-            // Only get a result if no result is assigned yet for this period number
-            if (!periodResults[periodNumber]) {
-                const result = getRandomResult();
-                periodResults[periodNumber] = result;
-                document.getElementById("resultBox").textContent = "Result: " + result;
-
-                // Show result box when result is available
-                document.getElementById("resultBox").style.display = "block";
-
-                addHistoryEntry(periodNumber, result);
-            }
-        });
-
-        setInterval(updateTimerAndResult, 1000);
-    </script>
+    // Add event listener to Get Result button
+    document.getElementById("getResultBtn").addEventListener("click", displayResult);
+</script>
 
 </body>
 </html>
